--- a/index.html
+++ b/index.html
@@ -12,13 +12,24 @@
 			<img src="assets/GameBoy.png" alt="not found" style="height: calc(17px*5); background-color: black;" data-pixelate="src"/>
 			<img src="assets/NC.png" alt="not found" style="height: calc(21px*5); background-color: black;" data-pixelate="src"/>
 		</div>
+		<div>
 		<img src="assets/2bityou.png" alt="not found" style="height: calc(17px*5); background-color: black; justify-self: end;" data-pixelate="src"/>
+		</div>
 	</div>
 	<div id="content">
+		<button id="toggle" class="_button">Toggle</button>
 	</div>
 
 	<script type="text/javascript" src="scripts/canvas.min.js"></script>
 	<script type="text/javascript" src="scripts/RGBA.js"></script>
+	<script type="text/javascript">
+		const sidebar = document.getElementById('sidebar');
+		const button = document.getElementById('toggle');
+
+		button.addEventListener('click', _ => {
+		  sidebar.classList.toggle('collapsed');
+		});
+	</script>
 </body>
 </html>
 <!-- style="background-image: url('assets/pullybg.png');" -->
