animation code that doesn't work intendedly

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 			<img src="assets/NC.png" alt="not found" style="height: calc(21px*5); background-color: black;" data-pixelate="src"/>
 		</div>
 		<div>
-		<img src="assets/2bityou.png" alt="not found" style="height: calc(17px*5); background-color: black; justify-self: end;" data-pixelate="src"/>
+		<img src="assets/2bityou.png" alt="not found" style="height: calc(17px*5); background-color: black;" data-pixelate="src"/>
 		</div>
 	</div>
 	<div id="content">
+		<img src="assets/GameBoyTalking3.png" alt="not found" 
+		style="width: calc(32*5); height: calc(32*5); background-color: white;" width="160px" height="160px" data-animate="src"
+		data-animateSet="assets/GameBoyTalking3.png, assets/GameBoyTalking2.png, assets/GameBoyTalking1.png"/>
 		<button id="toggle" class="_button">Toggle</button>
 	</div>
 
-	<script type="text/javascript" src="scripts/canvas.min.js"></script>
+	<script type="text/javascript" src="scripts/canvas.js"></script>
 	<script type="text/javascript" src="scripts/RGBA.js"></script>
 	<script type="text/javascript">
 		const sidebar = document.getElementById('sidebar');
