--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 		</div>
 	</div>
 	<div id="content">
+		<button id="toggle" 
+				style="width: calc(15px*5); height: calc(15px*5); background-color: white; background-image: url('assets/button.png');"
+				data-pixelate="bg"><img src="assets/close.svg" /></button>
 		<img src="assets/GameBoyTalking3.png" alt="not found" 
-		style="width: calc(32*5); height: calc(32*5); background-color: white;" width="160px" height="160px" data-animate="src"
+		style="width: calc(32*5); height: calc(32*5); background-color: white;" width="160px" height="160px" data-pixelate="src"
 		data-animateSet="assets/GameBoyTalking3.png, assets/GameBoyTalking2.png, assets/GameBoyTalking1.png"/>
-		<button id="toggle" class="_button">Toggle</button>
 	</div>
 
 	<script type="text/javascript" src="scripts/canvas.js"></script>
