fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 		<div style="display: flex; justify-content: center;">
 			<img src="assets/GameBoyTalking3.png" alt="not found" class="gameboytalking" width="160px" height="160px"data-pixelate="src"/>
-			<p class="chat" data-pixelate="bg">What are saying, we met yesterday.</p>
+			<p class="chat" data-pixelate="bg">What are you saying, we just met yesterday.</p>
 		</div>
 	</div>
 
